# NfcA-parser

./: Cargo.toml
.github/workflows/: rust-cargo-deny.yml  rust-clippy.yml  rust-fmt.yml  rust-test.yml
src/: dialog_interpreter.rs  error.rs  frame.rs  lib.rs  manchester.rs  miller.rs  miller_reworked.rs  time_record_both_ways.rs
