[package]
name = "nfca-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = {version = "1.0.1", default-features = false, features = ["alloc"]}
crc = "3.0.1"

[features]
default = ["std"]
std = []
